# inaSpeechSegmenter

./: README.md  pyproject.toml  run_test.py
inaSpeechSegmenter/: __init__.py  _version.py
inaSpeechSegmenter/cli/: __init__.py  ina_speech_segmenter.py  pyro_client.py  pyro_client_setjobs.py  pyro_server.py
scripts/: ina_speech_segmenter.py  ina_speech_segmenter_pyro_client_setjobs.py  ina_speech_segmenter_pyro_server.py
